fixed onboarding, database translations etc

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -585,6 +585,7 @@
     },
     "buttons": {
       "startFreeTrial": "Start 7-day free trial",
+      "subscribe": "Subscribe Now",
       "processing": "Processing...",
       "restorePurchases": "Restore Purchases"
     },
