fixed onboarding flow and paywall

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -585,7 +585,7 @@
     },
     "buttons": {
       "startFreeTrial": "Start 7-day free trial",
-      "subscribe": "Subscribe Now",
+      "subscribe": "Start 7-day free trial",
       "processing": "Processing...",
       "restorePurchases": "Restore Purchases"
     },
