--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -585,6 +585,7 @@
     },
     "buttons": {
       "startFreeTrial": "7-tägige kostenlose Testversion starten",
+      "subscribe": "7 Tage gratis testen",
       "processing": "Verarbeitung...",
       "restorePurchases": "Käufe wiederherstellen"
     },
