fixed last things

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -187,6 +187,13 @@
       "signOutFailed": "Abmeldung fehlgeschlagen",
       "deleteAccountTitle": "Konto löschen",
       "deleteAccountMessage": "Bist du sicher, dass du dein Konto dauerhaft löschen möchtest? Diese Aktion kann nicht rückgängig gemacht werden und alle Daten gehen verloren.",
+      "deleteAccountFinalTitle": "⚠️ Letzte Bestätigung",
+      "deleteAccountFinalMessage": "Diese Aktion kann NICHT rückgängig gemacht werden. Alle deine Daten werden dauerhaft von deinem Gerät und unseren Servern gelöscht.\n\nBist du dir absolut sicher?",
+      "deleteAccountConfirmButton": "Ja, alles löschen",
+      "deleteAccountInProgress": "Konto wird gelöscht...",
+      "deleteAccountInProgressMessage": "Bitte warte, während wir dein Konto und alle zugehörigen Daten löschen.",
+      "deleteAccountSuccessTitle": "✅ Konto gelöscht",
+      "deleteAccountSuccessMessage": "Dein Konto und alle zugehörigen Daten wurden dauerhaft gelöscht.",
       "deleteAccountSuccess": "Deine Kontolöschung wurde bearbeitet. Bitte kontaktiere den Support falls du Hilfe benötigst.",
       "deleteAccountFailed": "Kontolöschung fehlgeschlagen",
       "supabaseNotConfigured": "Supabase nicht konfiguriert",
