--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -161,6 +161,13 @@
       "signOutFailed": "Failed to sign out",
       "deleteAccountTitle": "Delete Account",
       "deleteAccountMessage": "Are you sure you want to permanently delete your account? This action cannot be undone and all your data will be lost.",
+      "deleteAccountFinalTitle": "⚠️ Final Confirmation",
+      "deleteAccountFinalMessage": "This action CANNOT be undone. All your data will be permanently deleted from both your device and our servers.\n\nAre you absolutely sure?",
+      "deleteAccountConfirmButton": "Yes, Delete Everything",
+      "deleteAccountInProgress": "Deleting Account...",
+      "deleteAccountInProgressMessage": "Please wait while we delete your account and all associated data.",
+      "deleteAccountSuccessTitle": "✅ Account Deleted",
+      "deleteAccountSuccessMessage": "Your account and all associated data have been permanently deleted.",
       "deleteAccountSuccess": "Your account deletion request has been processed. Please contact support if you need assistance.",
       "deleteAccountFailed": "Failed to delete account",
       "supabaseNotConfigured": "Supabase not configured",
