--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -187,6 +187,13 @@
       "signOutFailed": "échec de la déconnexion",
       "deleteAccountTitle": "Supprimer le Compte",
       "deleteAccountMessage": "Êtes-vous sûr de vouloir supprimer définitivement votre compte ? Cette action ne peut pas être annulée et toutes vos données seront perdues.",
+      "deleteAccountFinalTitle": "⚠️ Confirmation Finale",
+      "deleteAccountFinalMessage": "Cette action ne peut PAS être annulée. Toutes vos données seront définitivement supprimées de votre appareil et de nos serveurs.\n\nÊtes-vous absolument sûr ?",
+      "deleteAccountConfirmButton": "Oui, Tout Supprimer",
+      "deleteAccountInProgress": "Suppression du Compte...",
+      "deleteAccountInProgressMessage": "Veuillez patienter pendant que nous supprimons votre compte et toutes les données associées.",
+      "deleteAccountSuccessTitle": "✅ Compte Supprimé",
+      "deleteAccountSuccessMessage": "Votre compte et toutes les données associées ont été définitivement supprimés.",
       "deleteAccountSuccess": "Votre demande de suppression de compte a été traitée. Veuillez contacter le support si vous avez besoin d'aide.",
       "deleteAccountFailed": "échec de la suppression du compte",
       "supabaseNotConfigured": "Supabase non configuré",
